--- a/src/components/card.css
+++ b/src/components/card.css
@@ -13,7 +13,6 @@
   color: var(--checkbox-color);
   transition: color 0.3s;
   box-shadow: 2px 2px 5px #c5c5c5, -2px -2px 5px #ffffff;
-
 }
 
 .custom-checkbox input[type="checkbox"] {
@@ -77,6 +76,8 @@
   border-radius: 50px;
   background: #e0e0e0;
   box-shadow: 4px 4px 10px #bebebe, -4px -4px 10px #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
 }
 
 
